--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,19 +5,15 @@ members = [
     "wrappers",
 ]
 exclude = [
-    "wasm-wrappers/fdw/cal_fdw",
-    "wasm-wrappers/fdw/calendly_fdw",
-    "wasm-wrappers/fdw/cfd1_fdw",
-    "wasm-wrappers/fdw/clerk_fdw",
-    "wasm-wrappers/fdw/helloworld_fdw",
-    "wasm-wrappers/fdw/hubspot_fdw",
-    "wasm-wrappers/fdw/notion_fdw",
-    "wasm-wrappers/fdw/orb_fdw",
-    "wasm-wrappers/fdw/paddle_fdw",
-    "wasm-wrappers/fdw/slack_fdw",
-    "wasm-wrappers/fdw/snowflake_fdw",
+    "wasm-wrappers",
 ]
 resolver = "2"
+
+[workspace.package]
+edition = "2021"
+rust-version = "1.85.1"
+homepage = "https://github.com/supabase/wrappers"
+repository = "https://github.com/supabase/wrappers"
 
 [profile.dev]
 panic = "unwind"
