--- a/supabase-wrappers-macros/Cargo.toml
+++ b/supabase-wrappers-macros/Cargo.toml
@@ -1,7 +1,6 @@
 [package]
 name = "supabase-wrappers-macros"
 version = "0.1.17"
-edition = "2021"
 authors = ["Supabase Inc. https://supabase.com/"]
 license = "Apache-2.0"
 description = "Postgres Foreign Data Wrapper development framework macros for supabase-wrappers"
@@ -9,6 +8,8 @@ homepage = "https://github.com/supabase/wrappers/tree/main/supabase-wrappers-mac
 repository = "https://github.com/supabase/wrappers/tree/main/supabase-wrappers-macros"
 categories = ["database"]
 keywords = ["database", "postgres", "postgresql", "extension"]
+edition = { workspace = true }
+rust-version = { workspace = true }
 
 [dependencies]
 syn = { version = "1.0", features = ["full"] }
