--- a/supabase-wrappers/Cargo.toml
+++ b/supabase-wrappers/Cargo.toml
@@ -1,7 +1,6 @@
 [package]
 name = "supabase-wrappers"
 version = "0.1.22"
-edition = "2021"
 authors = ["Supabase Inc. https://supabase.com/"]
 license = "Apache-2.0"
 description = "Postgres Foreign Data Wrapper development framework in Rust."
@@ -9,6 +8,8 @@ homepage = "https://github.com/supabase/wrappers/tree/main/supabase-wrappers"
 repository = "https://github.com/supabase/wrappers/tree/main/supabase-wrappers"
 categories = ["database"]
 keywords = ["database", "postgres", "postgresql", "extension"]
+edition = { workspace = true }
+rust-version = { workspace = true }
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(pgrx_embed)'] }
