--- a/wrappers/Cargo.toml
+++ b/wrappers/Cargo.toml
@@ -204,7 +204,7 @@ either = { version = "1.12.0", optional = true }
 
 
 # for bigquery_fdw, firebase_fdw, airtable_fdw and etc.
-gcp-bigquery-client = { version = "0.25.1", optional = true }
+gcp-bigquery-client = { version = "0.25.1", features = ["rust-tls", "gzip"], optional = true }
 serde = { version = "1", optional = true }
 serde_json = { version = "1.0.86", optional = true }
 wiremock = { version = "0.5", optional = true }
