--- a/wrappers/Cargo.toml
+++ b/wrappers/Cargo.toml
@@ -204,7 +204,7 @@ either = { version = "1.12.0", optional = true }
 
 
 # for bigquery_fdw, firebase_fdw, airtable_fdw and etc.
-gcp-bigquery-client = { version = "0.25.1", features = ["rust-tls", "gzip"], optional = true }
+gcp-bigquery-client = { version = "0.25.1", optional = true }
 serde = { version = "1", optional = true }
 serde_json = { version = "1.0.86", optional = true }
 wiremock = { version = "0.5", optional = true }
@@ -282,6 +282,8 @@ iceberg = { git = "https://github.com/burmecia/iceberg-rust", branch = "main", p
 iceberg-catalog-s3tables = { git = "https://github.com/burmecia/iceberg-rust", branch = "main", package="iceberg-catalog-s3tables", optional = true }
 iceberg-catalog-rest = { git = "https://github.com/burmecia/iceberg-rust", branch = "main", package="iceberg-catalog-rest", optional = true }
 rust_decimal = { version = "1.37.1", optional = true }
+
+rustls = "=0.23.27"
 
 [dev-dependencies]
 pgrx-tests = "=0.12.9"
