--- a/.github/workflows/test_wrappers.yml
+++ b/.github/workflows/test_wrappers.yml
@@ -26,7 +26,7 @@ jobs:
 
     - uses: actions-rs/toolchain@v1
       with:
-        toolchain: 1.84.1
+        toolchain: 1.85.1
         default: true
         override: true
         components: rustfmt, clippy
@@ -74,7 +74,7 @@ jobs:
 
     - uses: actions-rs/toolchain@v1
       with:
-        toolchain: 1.84.1
+        toolchain: 1.85.1
         default: true
         override: true
         components: rustfmt, clippy
@@ -98,15 +98,17 @@ jobs:
 
     - name: Build Wasm FDWs
       run: |
-        find ./wasm-wrappers/fdw/ -name "Cargo.toml" -exec cargo component build --release --target wasm32-unknown-unknown --manifest-path {} \;
+        cd ./wasm-wrappers/fdw && cargo component build --release --target wasm32-unknown-unknown
 
+    # we don't want to check format for generated files, so we use
+    # 'git diff --quiet' trick here, instead of 'cargo fmt --check'
     - name: Format code
       run: |
-        find ./wasm-wrappers/fdw/ -name "Cargo.toml" -exec cargo fmt --check --manifest-path {} \;
+        cd ./wasm-wrappers/fdw && cargo fmt && git diff --quiet
 
     - name: Run clippy
       run: |
-        RUSTFLAGS="-D warnings" find ./wasm-wrappers/fdw/ -name "Cargo.toml" -exec cargo clippy --all --tests --no-deps --manifest-path {} \;
+        cd ./wasm-wrappers/fdw && RUSTFLAGS="-D warnings" cargo clippy --all --tests --no-deps
 
     - name: Perform test
       run: cd wrappers && cargo pgrx test --features "wasm_fdw pg15"
