ci: debug release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,6 +54,7 @@ jobs:
 
       - name: build release artifacts
         run: |
+          lsb_release -a
           gcc --version
           cd wrappers
 
