--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,12 +56,19 @@ jobs:
         run: |
           lsb_release -a
           gcc --version
+
           cd wrappers
 
-          # Add postgres package repo and install requested postgres version
+          # Add postgres package repo, upgrade gcc to v11 and install requested postgres version
           sudo apt update
           sudo apt remove -y postgres*
           sudo apt -y install curl ca-certificates build-essential pkg-config libssl-dev
+          sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+          sudo apt update
+          sudo apt install -y gcc-11 g++-11
+          sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-11 100
+          sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-11 100
+          gcc --version
           sudo install -d /usr/share/postgresql-common/pgdg
           sudo curl -o /usr/share/postgresql-common/pgdg/apt.postgresql.org.asc --fail https://www.postgresql.org/media/keys/ACCC4CF8.asc
           . /etc/os-release
