--- a/wrappers/.ci/docker-compose-native.yaml
+++ b/wrappers/.ci/docker-compose-native.yaml
@@ -154,7 +154,7 @@ services:
       - ../dockerfiles/s3/iceberg_seed.py:/iceberg_seed.py
     entrypoint: |
       /bin/sh -c "
-      until (/mc config host add s3 http://s3:8000 admin password) do echo '...waiting...' && sleep 1; done;
+      until (/mc alias set s3 http://s3:8000 admin password) do echo '...waiting...' && sleep 1; done;
       /mc rm -r --force s3/warehouse;
       /mc mb s3/warehouse;
       /mc policy set public s3/warehouse;
