--- a/wrappers/Cargo.toml
+++ b/wrappers/Cargo.toml
@@ -282,9 +282,9 @@ anyhow  = { version = "1.0.81", optional = true }
 uuid = { version = "1.16.0", optional = true }
 
 # for iceberg_fdw
-iceberg = { git = "https://github.com/apache/iceberg-rust", rev = "12485be4a30848213faea62740ad7cb5a41bd6f2", package = "iceberg", optional = true }
-iceberg-catalog-s3tables = { git = "https://github.com/apache/iceberg-rust", rev = "12485be4a30848213faea62740ad7cb5a41bd6f2", package="iceberg-catalog-s3tables", optional = true }
-iceberg-catalog-rest = { git = "https://github.com/apache/iceberg-rust", rev = "12485be4a30848213faea62740ad7cb5a41bd6f2", package="iceberg-catalog-rest", optional = true }
+iceberg = { version = "0.5.1", optional = true }
+iceberg-catalog-s3tables = { git = "https://github.com/burmecia/iceberg-rust", rev = "e565bc43c1b9fa6b25a601f68bcec1423a984cc1", package="iceberg-catalog-s3tables", optional = true }
+iceberg-catalog-rest = { version = "0.5.1", optional = true }
 rust_decimal = { version = "1.37.1", optional = true }
 
 [dev-dependencies]
