feat: add Gravatar Wasm FDW

--- a/wasm-wrappers/fdw/Cargo.toml
+++ b/wasm-wrappers/fdw/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "calendly_fdw",
     "cfd1_fdw",
     "clerk_fdw",
+    "gravatar_fdw",
     "helloworld_fdw",
     "hubspot_fdw",
     "notion_fdw",
