--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -34,6 +34,7 @@ nav:
           - Calendly: "catalog/calendly.md"
           - Clerk: "catalog/clerk.md"
           - Cloudflare D1: "catalog/cfd1.md"
+          - Gravatar: "catalog/gravatar.md"
           - HubSpot: "catalog/hubspot.md"
           - Notion: "catalog/notion.md"
           - Orb: "catalog/orb.md"
