--- a/wrappers/Cargo.toml
+++ b/wrappers/Cargo.toml
@@ -81,6 +81,16 @@ s3_fdw = [
     "chrono",
     "thiserror",
 ]
+s3vectors_fdw = [
+    "aws-config",
+    "aws-sdk-s3",
+    "aws-sdk-s3vectors",
+    "aws-smithy-types",
+    "aws-smithy-async",
+    "serde",
+    "serde_json",
+    "thiserror",
+]
 airtable_fdw = [
     "reqwest",
     "reqwest-middleware",
@@ -238,9 +248,16 @@ regex = { version = "1", optional = true }
 # for airtable_fdw, stripe_fdw
 url = { version = "2.3", optional = true }
 
-# for s3_fdw
+# for s3_fdw and s3vectors_fdw
 aws-config = { version = "1.6.3", features = ["behavior-version-latest"], optional = true }
+
+# for s3_fdw
 aws-sdk-s3 = { version = "1.86.0", optional = true }
+
+# for s3vectors_fdw
+aws-sdk-s3vectors = { version = "1.8.0", optional = true }
+aws-smithy-types = { version = "1.3.2", optional = true }
+aws-smithy-async = { version = "1.2.5", optional = true }
 
 # for cognito fdw
 aws-sdk-cognitoidentityprovider = { version ="1.60.0", optional = true }
@@ -291,7 +308,7 @@ hex = { version = "0.4.3", optional = true }
 bytes = { version = "1.9.0", optional = true }
 thiserror = { version = "1.0.48", optional = true }
 anyhow  = { version = "1.0.81", optional = true }
-uuid = { version = "1.16.0", optional = true }
+uuid = { version = "1.18.0", features = ["v7"], optional = true }
 
 # for iceberg_fdw
 iceberg = { version = "0.5.1", optional = true }
