--- a/wrappers/Cargo.toml
+++ b/wrappers/Cargo.toml
@@ -174,6 +174,7 @@ iceberg_fdw = [
     "arrow-json",
     "chrono",
     "futures",
+    "parquet",
     "rust_decimal",
     "serde_json",
     "thiserror",
@@ -250,7 +251,7 @@ regex = { version = "1", optional = true }
 url = { version = "2.3", optional = true }
 
 # for s3_fdw and s3vectors_fdw
-aws-config = { version = "1.6.3", features = ["behavior-version-latest"], optional = true }
+aws-config = { version = "1.8.6", features = ["behavior-version-latest"], optional = true }
 
 # for s3_fdw
 aws-sdk-s3 = { version = "1.86.0", optional = true }
@@ -312,9 +313,9 @@ anyhow  = { version = "1.0.81", optional = true }
 uuid = { version = "1.18.0", features = ["v7"], optional = true }
 
 # for iceberg_fdw
-iceberg = { version = "0.5.1", optional = true }
-iceberg-catalog-s3tables = { git = "https://github.com/burmecia/iceberg-rust", rev = "e565bc43c1b9fa6b25a601f68bcec1423a984cc1", package="iceberg-catalog-s3tables", optional = true }
-iceberg-catalog-rest = { version = "0.5.1", optional = true }
+iceberg = { version = "0.6.0", optional = true }
+iceberg-catalog-s3tables = { git = "https://github.com/burmecia/iceberg-rust", rev = "6548db2cc02b8ecd65e698e58d372d7dfb342b9c", package="iceberg-catalog-s3tables", optional = true }
+iceberg-catalog-rest = { version = "0.6.0", optional = true }
 rust_decimal = { version = "1.37.1", optional = true }
 
 # for duckdb_fdw
