--- a/wrappers/dockerfiles/s3/Dockerfile
+++ b/wrappers/dockerfiles/s3/Dockerfile
@@ -3,6 +3,6 @@
 FROM python:3.13-slim
 
 RUN apt-get update && apt-get install -y --no-install-recommends wget
-RUN pip install "pyiceberg[s3fs,pyarrow]" \
+RUN pip install "pyiceberg[s3fs,pyarrow]==0.10.0" \
     && wget https://dl.min.io/client/mc/release/linux-amd64/mc \
     && chmod +x mc
