--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -12,8 +12,7 @@ permissions:
 jobs:
   code-coverage:
     name: Code Coverage
-    runs-on:
-      group: Default Larger Runners
+    runs-on: blacksmith-4vcpu-ubuntu-2404
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
