--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,8 +42,8 @@ jobs:
         features:
           - "all_fdws"
         box:
-          - { runner: ubuntu-24.04, arch: amd64 }
-          - { runner: u22-arm-runner, arch: arm64 }
+          - { runner: blacksmith-8vcpu-ubuntu-2404, arch: amd64 }
+          - { runner: blacksmith-8vcpu-ubuntu-2404-arm, arch: arm64 }
     runs-on: ${{ matrix.box.runner }}
     timeout-minutes: 90
     steps:
