--- a/.github/workflows/release_wasm_fdw.yml
+++ b/.github/workflows/release_wasm_fdw.yml
@@ -11,7 +11,7 @@ permissions:
 jobs:
   release:
     name: Create Wasm FDW Release
-    runs-on: ubuntu-latest
+    runs-on: blacksmith-8vcpu-ubuntu-2404
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
