--- a/.github/workflows/test_supabase_wrappers.yml
+++ b/.github/workflows/test_supabase_wrappers.yml
@@ -11,7 +11,7 @@ permissions:
 jobs:
   test:
     name: Run supabase_wrappers tests
-    runs-on: ubuntu-24.04
+    runs-on: blacksmith-4vcpu-ubuntu-2404
 
     steps:
     - name: Checkout code
