--- a/.github/workflows/release_wasm_fdw.yml
+++ b/.github/workflows/release_wasm_fdw.yml
@@ -38,7 +38,7 @@ jobs:
           rustup target add wasm32-unknown-unknown
 
           # install Wasm component
-          cargo install cargo-component --version 0.21.1
+          cargo install --locked cargo-component --version 0.21.1
 
           # install rustfmt for the toolchain
           rustup component add rustfmt
