fix: include s3vectors_fdw in the native fdws list

--- a/wrappers/Cargo.toml
+++ b/wrappers/Cargo.toml
@@ -199,6 +199,7 @@ native_fdws = [
     "stripe_fdw",
     "firebase_fdw",
     "s3_fdw",
+    "s3vectors_fdw",
     "logflare_fdw",
     "auth0_fdw",
     "mssql_fdw",
