--- a/wrappers/Cargo.toml
+++ b/wrappers/Cargo.toml
@@ -325,7 +325,7 @@ iceberg-catalog-rest = { version = "0.6.0", optional = true }
 rust_decimal = { version = "1.37.1", optional = true }
 
 # for duckdb_fdw
-duckdb = { version = "1.3.2", features = ["bundled"], optional = true }
+duckdb = { version = "=1.3.2", features = ["bundled"], optional = true }
 
 [dev-dependencies]
 pgrx-tests = "=0.16.1"
