feat(infura): add Infura WASM FDW for blockchain data
Add a new WebAssembly Foreign Data Wrapper for querying blockchain data
via Infura JSON-RPC API. Supports Ethereum, Polygon, and other EVM-compatible
networks.

Features:
- 5 resource types: blocks, transactions, balances, logs, chain_info
- Query pushdown for block numbers, transaction hashes, and addresses
- Vault integration for secure API key storage (api_key_id option)
- Rate limit handling with exponential backoff retry
- Import foreign schema support for auto-generating tables

Closes #394

--- a/wasm-wrappers/fdw/Cargo.toml
+++ b/wasm-wrappers/fdw/Cargo.toml
@@ -6,6 +6,7 @@ members = [
     "clerk_fdw",
     "helloworld_fdw",
     "hubspot_fdw",
+    "infura_fdw",
     "notion_fdw",
     "orb_fdw",
     "paddle_fdw",
