feat: Add OpenAPI Foreign Data Wrapper
* feat: Implement OpenAPI FDW with schema mapping and foreign table generation

- Added schema.rs for mapping OpenAPI types to PostgreSQL types and generating CREATE FOREIGN TABLE statements.
- Introduced spec.rs for parsing OpenAPI specifications and extracting endpoint/schema information.
- Created world.wit file for OpenAPI FDW package definition.
- Enhanced server.py to mock OpenAPI endpoints for testing.
- Updated tests.rs to include tests for OpenAPI FDW functionality, including server creation and query execution.

* feat(openapi_fdw): add GeoJSON support, configurable pagination, and cleanup dead code

- Add object_path option for GeoJSON responses (e.g., /properties)
- Make page_size_param configurable (default: limit) with table-level override
- Add case-insensitive column matching for APIs with camelCase fields
- Use nullable field to generate NOT NULL constraints in CREATE TABLE
- Remove unused spec parsing structs: Parameter, RequestBody, SecurityScheme
- Simplify EndpointInfo to only path and response_schema
- Mark deserialize-only fields with #[allow(dead_code)]
- Make from_str() test-only with #[cfg(test)]

Tested with weather.gov API (stations, alerts endpoints)

* refactor(openapi_fdw): simplify code for clarity and maintainability

- Extract helper functions: json_to_rows, cell_to_string, extract_non_empty_string
- Flatten nested control flow with early returns in build_url and handle_pagination
- Simplify sanitize_column_name with cleaner string operations
- Clean up doc comments and move #[allow(dead_code)] to field level

* feat(vscode): add extensions.json for recommended Rust Analyzer

* feat(openapi_fdw): add custom HTTP headers support

- Add optional user_agent option for API identification (required by NWS)
- Add optional accept option for content negotiation (GeoJSON, JSON-LD)
- Add headers option for arbitrary custom headers as JSON object
- Apply clippy fixes: #[derive(Default)] for Schema, .next_

--- a/wasm-wrappers/fdw/Cargo.toml
+++ b/wasm-wrappers/fdw/Cargo.toml
@@ -8,6 +8,7 @@ members = [
     "hubspot_fdw",
     "infura_fdw",
     "notion_fdw",
+    "openapi_fdw",
     "orb_fdw",
     "paddle_fdw",
     "shopify_fdw",
