--- a/wasm-wrappers/fdw/Cargo.toml
+++ b/wasm-wrappers/fdw/Cargo.toml
@@ -17,6 +17,10 @@ members = [
 ]
 resolver = "2"
 
+[profile.release]
+strip = "debuginfo"
+lto = true
+
 [workspace.package]
 edition = "2024"
 rust-version = "1.88"
