--- a/wasm-wrappers/fdw/openapi_fdw/Cargo.toml
+++ b/wasm-wrappers/fdw/openapi_fdw/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "openapi_fdw"
-version = "0.1.4"
+version = "0.2.0"
 edition = { workspace = true }
 rust-version = { workspace = true }
 homepage = { workspace = true }
@@ -13,6 +13,13 @@ wit-bindgen-rt = "0.41.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 urlencoding = "2.1"
+
+[dev-dependencies]
+criterion = { version = "0.5", features = ["html_reports"] }
+
+[[bench]]
+name = "fdw_benchmarks"
+harness = false
 
 [package.metadata.component]
 package = "supabase:openapi-fdw"
