fix(openapi): use native target for test and clippy in Makefile
Unit tests and clippy can't run on wasm32-unknown-unknown since there's
no runtime to execute the binary. Auto-detect the host target via rustc
so make test and make clippy work out of the box on any platform.

--- a/wasm-wrappers/fdw/openapi_fdw/Makefile
+++ b/wasm-wrappers/fdw/openapi_fdw/Makefile
@@ -8,10 +8,10 @@ fmt:
 	cargo fmt
 
 clippy:
-	RUSTFLAGS="-D warnings" cargo clippy --all --tests --no-deps
+	RUSTFLAGS="-D warnings" cargo clippy --all --tests --no-deps --target $$(rustc -vV | awk '/^host:/ {print $$2}')
 
 test:
-	cargo test
+	cargo test --target $$(rustc -vV | awk '/^host:/ {print $$2}')
 
 build:
 	cargo component build --release --target wasm32-unknown-unknown
