feat(openapi): add YAML spec support, review fixes, and example improvements
Add YAML spec parsing via serde_yaml_ng so spec_url accepts both JSON
and YAML OpenAPI specs. Many APIs only publish YAML, so this makes the
FDW work out of the box with more APIs.

Also addresses PR review items:
- Replace deprecated serde_yaml with serde_yaml_ng
- debug_assert! -> assert! in this_mut() for release safety
- Header deduplication prevents duplicate content-type/authorization
- Empty/whitespace credentials filtered with warning
- Retry on 502/503 in addition to 429, with status-specific hints
- RowsOut stats now count rows consumed by PG, not just fetched
- Validate max_pages >= 1
- base_url validation for spec-derived server URLs
- Improved error messages (show both JSON and YAML parse errors)

Example updates:
- All 5 examples get IMPORT FOREIGN SCHEMA as section 1
- New import servers with spec_url (or spec_json for Threads)
- Threads example shows CREATE SERVER with inline spec_json
- PokeAPI highlights YAML spec support

--- a/wasm-wrappers/fdw/openapi_fdw/Cargo.toml
+++ b/wasm-wrappers/fdw/openapi_fdw/Cargo.toml
@@ -12,6 +12,7 @@ crate-type = ["cdylib"]
 wit-bindgen-rt = "0.41.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_yaml_ng = "0.10"
 urlencoding = "2.1"
 
 [package.metadata.component]
