ci: add path filters to test workflows to skip unneeded jobs
Adds path-based filtering so CI only runs relevant jobs per PR:
- test_wrappers: detection job gates native vs wasm jobs independently
- test_supabase_wrappers: native paths filter on trigger
- coverage: native paths filter on trigger
- test_docs: new workflow to build MkDocs on docs changes

Closes #574

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -2,9 +2,19 @@ name: Code Coverage
 
 on:
   pull_request:
+    paths:
+      - 'wrappers/**'
+      - 'supabase-wrappers/**'
+      - 'supabase-wrappers-macros/**'
+      - '.github/workflows/coverage.yml'
   push:
     branches:
       - main
+    paths:
+      - 'wrappers/**'
+      - 'supabase-wrappers/**'
+      - 'supabase-wrappers-macros/**'
+      - '.github/workflows/coverage.yml'
 
 permissions:
   contents: write
